--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ uvicorn[standard]==0.24.0
 google-generativeai==0.3.1
 python-dotenv==1.0.0
 pydantic==2.5.0
-pydantic[email]==2.5.0
 python-multipart==0.0.6
-email-validator
-openpyxl
+email-validator==2.3.0
+openpyxl==3.1.5
+pandas==2.1.4
+aiofiles==23.2.1
